trunk/Archive2/19/ba72fa7799510d/output
In file included from main.cpp:5:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/random:35:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support for the \
 ^
main.cpp:9:10: error: no type named 'random_device' in namespace 'std'
    std::random_device rd;
    ~~~~~^
main.cpp:10:10: error: no member named 'mt19937' in namespace 'std'
    std::mt19937 gen(rd());
    ~~~~~^
main.cpp:14:10: error: no member named 'normal_distribution' in namespace 'std'
    std::normal_distribution<> d(5,2);
    ~~~~~^
main.cpp:14:30: error: expected expression
    std::normal_distribution<> d(5,2);
                             ^
main.cpp:14:32: error: use of undeclared identifier 'd'
    std::normal_distribution<> d(5,2);
                               ^
main.cpp:18:16: error: no member named 'round' in namespace 'std'; did you mean simply 'round'?
        ++hist[std::round(d(gen))];
               ^~~~~~~~~~
               round
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:311:14: note: 'round' declared here
__MATHCALLX (round,, (_Mdouble_ __x), (__const__));
             ^
/usr/include/math.h:60:26: note: expanded from macro '__MATHCALLX'
  __MATHDECLX (_Mdouble_,function,suffix, args, attrib)
                         ^
/usr/include/math.h:62:22: note: expanded from macro '__MATHDECLX'
  __MATHDECL_1(type, function,suffix, args) __attribute__ (attrib); \
                     ^
/usr/include/math.h:65:31: note: expanded from macro '__MATHDECL_1'
  extern type __MATH_PRECNAME(function,suffix) args __THROW
                              ^
/usr/include/math.h:68:42: note: expanded from macro '__MATH_PRECNAME'
#define __MATH_PRECNAME(name,r) __CONCAT(name,r)
                                         ^
/usr/include/x86_64-linux-gnu/sys/cdefs.h:94:23: note: expanded from macro '__CONCAT'
#define __CONCAT(x,y)   x ## y
                        ^
main.cpp:18:29: error: use of undeclared identifier 'gen'
        ++hist[std::round(d(gen))];
                            ^
main.cpp:20:9: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    for(auto p : hist) {
        ^
main.cpp:20:16: error: range-based for loop is a C++11 extension [-Werror,-Wc++11-extensions]
    for(auto p : hist) {
               ^
main.cpp:24:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
11 errors generated.
